# pipeline

./: .gitignore  Dockerfile  Gemfile  LICENSE  README.md  Rakefile  app.html  biome.json  docker-compose.yml  justfile  main.py  package.json  people.csv  pyproject.toml  query.py
.bundle/: config
.github/workflows/: dataimport.yml  test.yml
data/: birthdays.csv  birthdays.parquet  customer_bdays_collated.csv  customer_bdays_collated.parquet  customers.csv  customers.parquet  global_temperatures.parquet
data/imports/: networkworld.csv  networkworld.html  networkworld.json
data/imports/networkworld/: networkworld.csv  networkworld.html  networkworld.md
lib/: db.rb  import.rb
lib/imports/: networkworld.rb
queries/: birthdays.py  customer-bdays-collated.py  customers.py  customers_bdays_collated.py  global_temperatures.py
testdata/: birthdays.csv  customers.csv
viewer/: index.html  package.json
viewer/src/: App.tsx
