[project]
name = "polars01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "polars>=1.24.0",
    "structlog>=25.1.0",
    "vl-convert-python>=1.7.0",
]

[dependency-groups]
dev = [
    "pylance>=0.23.2",
    "ruff>=0.9.10",
]
